--- a/test/dune
+++ b/test/dune
@@ -2,6 +2,6 @@
  (name test)
  (flags
   (:standard -w -30))
- (libraries core alcotest yaml)
+ (libraries bos alcotest yaml)
  (preprocess
   (pps ppx_yaml)))
