--- a/ppx_yaml.opam
+++ b/ppx_yaml.opam
@@ -11,6 +11,7 @@ depends: [
   "dune" {>= "2.6"}
   "alcotest" {with-test}
   "bos" {with-test}
+  "mdx" {with-test}
   "ezjsonm" {with-test}
   "ocaml" {>= "4.08.1"}
   "ppxlib"
