install in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,5 +23,7 @@ jobs:
       run: opam install -t . --deps-only
     - name: Build
       run: opam exec -- dune build
+    - name: Install 
+      run: opam exec -- dune install
     - name: Test
       run: opam exec -- dune runtest
